atualizando as coisas

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                 <li>Resources <img src="../img/Down Arrow.png" alt=""></li>
                 <li>Pricing <img src="../img/Down Arrow.png" alt=""></li>
             </ul>
-            <div><button class="botao-login">Login</button> <button class="botao-try-free">Try Whitepace free</button></div>
+            <div><button class="botao-login">Login</button> <button class="botao-try-free">Try Whitepace free <img src="../img/Group 212.png" alt=""></button></div>
         </div>
     </header>
     <main>
