--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
-    <title>Document</title>
+    <title>Whitepace</title>
 </head>
 <body>
     <header class="navebar">
         <div class="navebar-img">
             <img src="../img/Logo.png" alt="logo">
+            <div><img class="icone-hamburguer"  src="../img/Hum-menu.png" alt=""></div>
+            
         </div>
         <div class="navebar-opcoes">
+            
             <ul class="navebar-opcoes-items">
                 <li>Products <img src="../img/Down Arrow.png" alt=""></li>
                 <li>Solutions <img src="../img/Down Arrow.png" alt=""></li>
